fix: show green arrow when barrier is off screen above price

--- a/sass/components/_barrier.scss
+++ b/sass/components/_barrier.scss
@@ -83,7 +83,6 @@
 
     .arrow-icon {
         height: 41px;
-        top: -41px;
         padding: 4px 0px;
         position: absolute;
         transition: none;
